# silvioom

./: CMakeLists.txt  Makefile  partitions.csv  sdkconfig  sdkconfig.old  silvio.wad
components/badge/: CMakeLists.txt  Kconfig  badge.c  badge_eink.c  badge_eink_dev.c  badge_eink_types.h  badge_pins.h  component.mk
components/badge/include/: badge_pins.h
components/prboom/: CMakeLists.txt
components/prboom-esp32-compat/: CMakeLists.txt  Kconfig.projbuild  i_system.c  i_video.c  psxcontroller.c  spi_lcd.c
components/prboom-esp32-compat/include/: .lcd_registers.h.swp
components/prboom-wad-tables/: CMakeLists.txt
components/prboom/include/: doomdef.h
main/: CMakeLists.txt  app_main.c
